<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeatherApp</string>

    <string name="moscow_city">Moscow</string>
    <string name="tver_city">Tver</string>
    <string name="samara_city">Samara</string>
    <string name="kazan_city">Kazan</string>
    <string name="razan_city">Razan</string>
    <string name="tula_city">Tula</string>
    <string name="yaroslavl_city">Yaroslavl</string>
    <string name="kaluga_city">Kaluga</string>
    <string name="smolensk_city">Smolensk</string>
    <string name="petersburg_city">St. Petersburg</string>
    <string name="detroit_city">Detroit</string>

    <string name="title_activity_settings">Settings</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="forecastSunny">Sunny</string>
    <string name="forecast_icon_description">Forecast icon</string>
    <string name="temperature_example">...</string>
    <string name="settings_dark_theme_label">Switch to Dark Theme</string>

    <string name="apply">Apply</string>
    <string name="celsius" translatable="false">\u2103</string>
    <string name="fahrenheit" translatable="false">\u2109</string>
    <string name="temp_units">Temperature units</string>
    <string name="speed_units">Speed units</string>
    <string name="mph">mph</string>
    <string name="kph">kph</string>
    <string name="m_s">m/s</string>
    <string name="wind_example" translatable="false">...</string>

    <string name="day_fmt" translatable="false">EEE dd.MM</string>
    <string name="weather_icon">Weather icon</string>
    <string name="city_validation_error">City name is incorrect</string>
    <string name="city_name_not_supported">We cannot show the forecast for this city</string>
    <string name="settings">Settings</string>
    <string name="app_theme_apply_message">Applying theme</string>

    <string name="direction_e">E</string>
    <string name="direction_ne">NE</string>
    <string name="direction_n">N</string>
    <string name="direction_nw">NW</string>
    <string name="direction_w">W</string>
    <string name="direction_sw">SW</string>
    <string name="direction_s">S</string>
    <string name="direction_se">SE</string>

    <string name="wiki_url_format">https://en.wikipedia.org/wiki/%s</string>
    <string name="temp_format" translatable="false">%+d / %+d %s</string>
    <string name="current_temp_format">%+d (feels like %+d) %s</string>
    <string name="current_wind_format" translatable="false">%.1f %s (%s)</string>

    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>
    <string name="history">History</string>
    <string name="menu_home">Home</string>
    <string name="nav_header_desc">Author avatar</string>
    <string name="nav_header_subtitle">Best app ever</string>
    <string name="nav_header_title">Weather anywhere anytime</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="title_activity_about">About</string>
    <!-- Strings used for fragments for navigation -->

    <string name="author_photo">Author photo</string>
    <string name="author_name">Alex Shevelev</string>
    <string name="author_contacts" translatable="false">alex.s@softmine.ru</string>
    <string name="menu_cities">Cities</string>
    <string name="menu_history">View history</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="more">More</string>
    <string name="contact_author_by_email">Contact author by email</string>
    <string name="default_subject">Hello</string>
    <string name="title_dialog_error">Error</string>
    <string name="cityNameRegEx" translatable="false">^([a-zA-Z\\\\u0080-\\\\u024F]+(?:. |-| |\\\'))*[a-zA-Z\\\\u0080-\\\\u024F]*$</string>
    <string name="authorities" translatable="false">ru.softmine.weatehrapp.history</string>
    <string name="airplane_mode_message">Airplane mode on</string>
    <string name="no_wifi_message">WiFi is not connected</string>
    <string name="no_connection_title">No connection</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="no_low_message">Battery charge is low</string>
    <string name="battery_low">Low battery</string>
    <string name="push_notification">PUSH notification</string>
    <string name="empty_push_body">Push body is empty</string>
    <string name="menu_select_on_map">Select on map</string>
    <string name="menu_my_location">My location</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_cities">Cities</string>
    <string name="title_activity_history">Weather history</string>
    <string name="action_ok">OK</string>
    <string name="im_here">I\'m here</string>
    <string name="location_unknown">Unknown</string>
    <string name="locale">en</string>
    <string name="sign_in_failed">Sign in failed: </string>
    <string name="title_dialog_sign_out">Sign out</string>
    <string name="sign_out_message">Signing in was cancelled due error or user action.\nApplication will be closed.</string>>
</resources>