<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="0dp"
    android:layout_width="match_parent">
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_current_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/menu_my_location"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_history"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_on_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_select_on_map"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>