<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/box_inset_layout_padding"
        app:srcCompat="@drawable/drstein_320" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textColor="@android:color/tab_indicator_text"
        android:textSize="@dimen/labels_text_size"
        android:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/labels_text_size"
        android:textColor="@android:color/tab_indicator_text"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>