<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_marginTop="@dimen/text_view_padding"
        android:layout_marginEnd="@dimen/layout_space_size"
        android:contentDescription="@string/forecast_icon_description"
        android:scaleType="centerCrop"
        android:src="@drawable/unknown"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityNameTextView" />

    <ru.softmine.weatherapp.custom.ThermometerView
        android:id="@+id/thermometerView"
        android:layout_width="@dimen/thermometer_width"
        android:layout_height="@dimen/image_size"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/weatherIconImageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weatherIconImageView"
        app:layout_constraintTop_toTopOf="@+id/weatherIconImageView"
        app:level_degrees="10" />

    <TextView
        android:id="@+id/tempsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_padding"
        android:text="@string/temperature_example"
        android:textAlignment="center"
        android:textSize="@dimen/labels_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastTextView" />

    <TextView
        android:id="@+id/cityNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/info_icon_size"
        android:onClick="cityOnClick"
        android:text="@string/moscow_city"
        android:textAlignment="center"
        android:textSize="@dimen/city_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecastTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_padding"
        android:text="@string/forecastSunny"
        android:textAlignment="center"
        android:textSize="@dimen/city_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIconImageView" />

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_padding"
        android:text="@string/wind_example"
        android:textAlignment="center"
        android:textSize="@dimen/labels_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempsTextView" />

    <Button
        android:id="@+id/buttonInfo"
        android:layout_width="@dimen/info_icon_size"
        android:layout_height="@dimen/info_icon_size"
        android:layout_marginEnd="5dp"
        android:background="@android:drawable/ic_dialog_info"
        android:backgroundTint="?attr/colorDecorator"
        android:fontFamily="casual"
        android:onClick="onButtonInfoClick"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cityNameTextView"
        app:layout_constraintEnd_toEndOf="@+id/thermometerView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cityNameTextView"
        app:layout_constraintTop_toTopOf="@+id/cityNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>